<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Space
                android:layout_width="fill_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/win"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/win"
                android:textColor="#ffffff"
                android:textSize="50dp" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/timeTakenTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/timeTaken"
                android:textColor="#ffffff"
                android:textSize="30dp" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/timeTakenH"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/defaulttextboxfill"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/timeTakenM"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/defaulttextboxfill"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/timeTakenS"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/defaulttextboxfill"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/scoreTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lastScore"
                android:textColor="#ffffff"
                android:textSize="30dp" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/score"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/defaulttextboxfill"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10dp" />

            <ImageView 
               	android:id="@+id/smileGuy"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/guy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/codebreaker_guy_large_win"/>
            
            <Space
                android:layout_width="fill_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/bMain"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main"
                android:textColor="#ffffff"
                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>